Fix forum and text
